# vocab-workers

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
vocab/: app.py  cache.py  cmdi.py  config.py  create.py  enrich.py  pipeline.py  run.py  summarize.py  tasks.py  util.py  web.py
vocab/tasks/: bartoc.py  cache.py  documentation.py  index.py  jsonld.py  lov.py  pipeline.py  skosmos.py  sparql.py  summarizer.py
vocab/util/: context.json  elasticsearch.py  file.py  fs.py  http.py  lock.py  rdf.py  redis.py  work.py  xml.py
vocab_workers/: app.py  cmdi.py
vocab_workers/workers/: LinkedOpenVocabulariesWorker.py  Listener.py  SummarizerWorker.py  Worker.py
