[tool.poetry]
name = "vocab-workers"
version = "0.1.0"
description = ""
readme = "README.md"
package-mode = false
packages = [
    { include = "vocab" }
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
celery = "^5.4.0"
redis = "^5.0.8"
flower = "^2.0.1"
lxml = "^5.3.0"
elementpath = "^4.4.0"
pylode = "^3.2.0"
rdflib = "^7.0.0"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
