[tool.poetry]
name = "vocab-workers"
version = "0.1.0"
description = ""
readme = "README.md"
package-mode = false
packages = [
    { include = "vocab" }
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
celery = "^5.5.1"
redis = {version = "^5.2.1", extras = ["hiredis"]}
flower = "^2.0.1"
lxml = "^5.3.2"
elementpath = "^4.8.0"
pylode = "^3.2.1"
rdflib = "^7.1.4"
pydantic = "^2.11.2"
beautifulsoup4 = "^4.13.3"
markdown = "^3.7"
pyld = "^2.0.4"
python-dotenv = "^1.1.0"
elasticsearch = "^8.17.2"
fastapi = "^0.115.11"
uvicorn = {version = "^0.34.0", extras = ["standard"]}
fastapi-cli = "^0.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
